--- a/DLC-CPU.yaml
+++ b/DLC-CPU.yaml
@@ -3,10 +3,13 @@ channels:
   - conda-forge
   - defaults
 dependencies:
-  - python=3.7
+  - python=3.6
   - pip
   - jupyter
   - nb_conda
-#  - pip:
-#    - tensorflow==1.15.5
+  - six 
+  - wheel 
+  - setuptools
+  - pip:
+    - tensorflow==1.15.5
 #    - deeplabcut[gui]
