--- a/Dockerfile-GPU
+++ b/Dockerfile-GPU
@@ -8,9 +8,10 @@ ENV TZ=America/New_York
 RUN DEBIAN_FRONTEND=noninteractive apt-get update -y && apt-get -y install wget gnupg
 RUN wget --progress=dot:mega https://developer.download.nvidia.com/compute/cuda/repos/ubuntu2004/x86_64/cuda-ubuntu2004.pin && \
     mv cuda-ubuntu2004.pin /etc/apt/preferences.d/cuda-repository-pin-600
-#RUN wget https://developer.download.nvidia.com/compute/cuda/11.3.1/local_installers/cuda-repo-ubuntu2004-11-3-local_11.3.1-465.19.01-1_amd64.deb
-COPY ./cuda-repo-ubuntu2004-11-3-local_11.3.1-465.19.01-1_amd64.deb ./
-RUN DEBIAN_FRONTEND=noninteractive dpkg -i cuda-repo-ubuntu2004-11-3-local_11.3.1-465.19.01-1_amd64.deb 
+RUN wget https://developer.download.nvidia.com/compute/cuda/11.3.1/local_installers/cuda-repo-ubuntu2004-11-3-local_11.3.1-465.19.01-1_amd64.deb
+#COPY ./cuda-repo-ubuntu2004-11-3-local_11.3.1-465.19.01-1_amd64.deb ./
+RUN DEBIAN_FRONTEND=noninteractive dpkg -i cuda-repo-ubuntu2004-11-3-local_11.3.1-465.19.01-1_amd64.deb && \ 
+    rm cuda-repo-ubuntu2004-11-3-local_11.3.1-465.19.01-1_amd64.deb
 RUN apt-key add /var/cuda-repo-ubuntu2004-11-3-local/7fa2af80.pub
 RUN DEBIAN_FRONTEND=noninteractive apt-get update -y 
 RUN DEBIAN_FRONTEND=noninteractive apt-get install -y cuda
@@ -41,5 +42,5 @@ SHELL ["conda", "run", "-n", "DEEPLABCUT", "/bin/bash", "-c"]
 RUN conda install tensorflow-gpu==1.15.0
 RUN conda install -c conda-forge wxpython
 RUN pip install deeplabcut
-COPY ./run.sh /run.sh
-#RUN echo "#!/bin/bash \n source activate DEEPLABCUT \n python -m deeplabcut"> /run.sh 
+#COPY ./run.sh /run.sh
+RUN echo "#!/bin/bash \n source activate DEEPLABCUT \n python -m deeplabcut"> /run.sh 
