--- a/Dockerfile-GPU-GUI
+++ b/Dockerfile-GPU-GUI
@@ -18,6 +18,7 @@ RUN wget --progress=dot:mega https://developer.download.nvidia.com/compute/cuda/
 
 RUN apt-key add /var/cuda-repo-ubuntu2004-11-3-local/7fa2af80.pub && \
     DEBIAN_FRONTEND=noninteractive apt-get update -y && \
+    DEBIAN_FRONTEND=noninteractive apt-get clean -y && \
     DEBIAN_FRONTEND=noninteractive apt-get install -y cuda && \
     apt install -y nvidia-cuda-toolkit gcc-9
 
