--- a/Dockerfile-GPU-GUI
+++ b/Dockerfile-GPU-GUI
@@ -18,33 +18,35 @@ RUN wget --progress=dot:mega https://developer.download.nvidia.com/compute/cuda/
 
 RUN apt-key add /var/cuda-repo-ubuntu2004-11-3-local/7fa2af80.pub && \
     DEBIAN_FRONTEND=noninteractive apt-get update -y && \
-    DEBIAN_FRONTEND=noninteractive apt-get clean -y && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y cuda && \
-    apt install -y nvidia-cuda-toolkit gcc-9
+    DEBIAN_FRONTEND=noninteractive apt-get install -y libcanberra-gtk-module libcanberra-gtk3-module && \
+    DEBIAN_FRONTEND=noninteractive apt-get clean -y
+
+#    DEBIAN_FRONTEND=noninteractive apt-get install -y cuda libcanberra-gtk-module libcanberra-gtk3-module
+#    apt install -y nvidia-cuda-toolkit
+
 
 # Intall Anaconda
-RUN echo 'export PATH=/anaconda3/bin:$PATH' > /etc/profile.d/anaconda.sh && \
-    wget https://repo.continuum.io/archive/Anaconda3-2021.05-Linux-x86_64.sh -O /anaconda.sh && \
-    /bin/bash /anaconda.sh -b -p /anaconda3 && \
-    rm anaconda.sh
+RUN wget https://repo.anaconda.com/miniconda/Miniconda3-latest-Linux-x86_64.sh -O /miniconda.sh && \
+    /bin/bash /miniconda.sh -b -p /miniconda3 && \
+    rm miniconda.sh
 
-ENV PATH=/anaconda3/bin:$PATH
-ENV PATH=/anaconda3/envs/DEEPLABCUT/bin:$PATH
+ENV PATH=/miniconda3/bin:$PATH
+ENV PATH=/miniconda3/envs/DEEPLABCUT/bin:$PATH
 
 ##### Install Deeplabcut and its dependencies #####
 ##### fix inconsistency between Anaconda glib and Ubuntu version
 # Install DeepLabCut
-RUN apt-get -y install libcanberra-gtk-module libcanberra-gtk3-module
 
-COPY ./DEEPLABCUT.yaml ./
-RUN conda env create -f DEEPLABCUT.yaml
-SHELL ["conda", "run", "-n", "DEEPLABCUT", "/bin/bash", "-c"]
-RUN conda install tensorflow-gpu==1.15.0
-RUN conda install -c conda-forge wxpython
-RUN pip install deeplabcut && \
-    bash /anaconda3/envs/DEEPLABCUT/lib/python3.7/site-packages/deeplabcut/pose_estimation_tensorflow/models/pretrained/download.sh
+COPY ./OOD-DEEPLABCUT.yaml ./
+COPY ./OOD-install.sh ./
+#RUN conda env create -f DEEPLABCUT.yaml
+#SHELL ["conda", "run", "-n", "DEEPLABCUT", "/bin/bash", "-c"]
+#RUN conda install tensorflow-gpu==1.15.0
+#RUN conda install -c conda-forge wxpython
+#RUN pip install deeplabcut && \
+#    bash /anaconda3/envs/DEEPLABCUT/lib/python3.7/site-packages/deeplabcut/pose_estimation_tensorflow/models/pretrained/download.sh
 RUN echo "#!/bin/bash" > run.sh && \
-    echo "source activate DEEPLABCUT" >> run.sh && \
+    echo "source activate OOD-DEEPLABCUT" >> run.sh && \
     echo "python -m deeplabcut" >> /run.sh 
 
 
