needed to add libXxf86vm

--- a/Dockerfile-GPU
+++ b/Dockerfile-GPU
@@ -18,7 +18,7 @@ RUN wget --progress=dot:mega https://developer.download.nvidia.com/compute/cuda/
 
 RUN apt-key add /var/cuda-repo-ubuntu2004-11-3-local/7fa2af80.pub && \
     DEBIAN_FRONTEND=noninteractive apt-get update -y && \
-    DEBIAN_FRONTEND=noninteractive apt-get install -y libcanberra-gtk-module libcanberra-gtk3-module && \
+    DEBIAN_FRONTEND=noninteractive apt-get install -y libXxf86vm libcanberra-gtk-module libcanberra-gtk3-module && \
     DEBIAN_FRONTEND=noninteractive apt-get clean -y
 
 #    DEBIAN_FRONTEND=noninteractive apt-get install -y cuda libcanberra-gtk-module libcanberra-gtk3-module
@@ -37,7 +37,7 @@ ENV PATH=/miniconda3/envs/DEEPLABCUT/bin:$PATH
 ##### fix inconsistency between Anaconda glib and Ubuntu version
 # Install DeepLabCut
 
-## add these at runtime
+## install at runtime
 
 #COPY ./OOD-DEEPLABCUT.yaml ./
 #COPY ./OOD-install.sh ./
