--- a/Dockerfile.latest-gui
+++ b/Dockerfile.latest-gui
@@ -10,7 +10,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update -yy \
 
 RUN pip install --no-cache-dir --upgrade pip \
  && pip install --no-cache-dir opencv-contrib-python \
- && pip install --no-cache-dir opencv-python
+ && pip install --no-cache-dir opencv-python \
  && pip install --no-cache-dir --upgrade "deeplabcut[gui]>=2.2.0.2" numpy==1.19.5 decorator==4.4.2 tensorflow==2.5.0
 
 ENV DLClight=False
