--- a/Dockerfile.latest-gui
+++ b/Dockerfile.latest-gui
@@ -3,7 +3,7 @@ FROM deeplabcut/deeplabcut:base
 RUN DEBIAN_FRONTEND=noninteractive apt-get update -yy \ 
     && DEBIAN_FRONTEND=noninteractive \
          apt-get install -yy --no-install-recommends \
-         libgtk-3-dev python3-wxgtk4.0 locales \
+         libgtk-3-dev python3-wxgtk4.0 locales libsm6 libxext6 libxrender-dev \
     && apt-get clean \
     && rm -rf /var/lib/apt/lists/* \
     && locale-gen en_US.UTF-8 en_GB.UTF-8
