--- a/Dockerfile.latest-gui
+++ b/Dockerfile.latest-gui
@@ -8,6 +8,7 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update -yy \
     && rm -rf /var/lib/apt/lists/* \
     && locale-gen en_US.UTF-8 en_GB.UTF-8
 
+RUN ln -s /usr/local/lib/libpng15-c2ffaf3d.so.15.13.0 /usr/lib
 RUN pip install --no-cache-dir --upgrade pip \
  && pip install --no-cache-dir opencv-contrib-python \
  && pip install --no-cache-dir opencv-python \
