try to alter LD_LIB_PATH

--- a/Dockerfile.latest-gui
+++ b/Dockerfile.latest-gui
@@ -8,11 +8,11 @@ RUN DEBIAN_FRONTEND=noninteractive apt-get update -yy \
     && rm -rf /var/lib/apt/lists/* \
     && locale-gen en_US.UTF-8 en_GB.UTF-8
 
-RUN ln -s /usr/local/lib/python3.8/dist-packages/opencv_python.libs/libpng15-c2ffaf3d.so.15.13.0 /usr/lib
 RUN pip install --no-cache-dir --upgrade pip \
  && pip install --no-cache-dir opencv-contrib-python \
  && pip install --no-cache-dir opencv-python \
  && pip install --no-cache-dir --upgrade "deeplabcut[gui]>=2.2.0.2" numpy==1.19.5 decorator==4.4.2 tensorflow==2.5.0
 
 ENV DLClight=False
+ENV LD_LIBRARY_PATH=/usr/local/lib/python3.8/dist-packages/opencv_python.libs:$LD_LIBRARY_PATH
 CMD ["python3", "-m", "deeplabcut"]
